--- a/css/main.css
+++ b/css/main.css
@@ -26,3 +26,53 @@
     display: flex;
     transition: transform 0.3s ease-in-out;
 }
+
+        /* Estilos para animaciones */
+        .fade-in {
+            opacity: 0;
+            transform: translateY(20px);
+            transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+        }
+        .fade-in.visible {
+            opacity: 1;
+            transform: translateY(0);
+        }
+        /* Mejoras visuales en el hover de botones */
+        .btn-hover:hover {
+            transform: scale(1.05);
+        }
+
+
+        
+        .mockup-section {
+            background-color: #f5f5f5; /* Color suave de fondo */
+        }
+        
+        .phone-mockup {
+            position: relative;
+        }
+        
+        .app-screen {
+            position: absolute;
+            top: 20px; /* Ajusta esto dependiendo de la alineación de tu mockup */
+            left: 22px; /* Ajusta el desplazamiento de la pantalla */
+            width: 85%; /* Ajusta el tamaño para que encaje en el mockup */
+            height: 90%;
+            overflow: hidden;
+            border-radius: 20px;
+        }
+        
+        .text-content {
+            padding-right: 2rem;
+        }
+        
+        @media (min-width: 768px) {
+            .mockup-section {
+                flex-direction: row;
+            }
+        
+            .mockup {
+                margin-left: 4rem;
+            }
+        }
+        
